# this

./: .gitignore  ALL_FILES_LIST.txt  ARCHITECTURE.md  ARCHITECTURE_MICROSERVICES.md  CHANGELOG.md  CHANGELOG_MICROSERVICES.md  CHECKLIST.md  COMPLETED.md  CONTRIBUTING.md  CRUD_ROUTES_ADDED.md  Cargo.toml  EXAMPLES_RESTRUCTURED.md  FILES_CREATED.md  FINAL_SUMMARY.txt  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  LATEST_CHANGES.md  LICENSE-MIT  LINK_AUTH_IMPLEMENTATION.md  MICROSERVICES_UPDATE.md  Makefile  NOMENCLATURE_IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  ROUTING_EXPLANATION.md  START_HERE.md  STORE_SIMPLIFICATION.md  TODO.md  audit.toml  build.rs  create_archive.sh  links.yaml  tree.sh
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  README.md  WORKFLOWS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ALTERNATIVES.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_LIMITATION.md  IMBICATION_STATUS.md  PLAN_FIX_3LEVEL_ROUTES.md  README.md  graphql_dynamic_types_decision.md
docs/architecture/: ARCHITECTURE.md  GRAPHQL_IMPLEMENTATION.md  LINK_AUTH_IMPLEMENTATION.md  ROUTING_EXPLANATION.md  SERVER_BUILDER_IMPLEMENTATION.md
docs/changes/: AUTO_ROUTING_SUCCESS.md  ENRICHED_LINKS_IMPLEMENTATION.md  ENTITY_FOLDERS_STRUCTURE.md  LATEST_CHANGES.md  MODULE_RESTRUCTURING.md  SEMANTIC_URLS.md  SEMANTIC_URLS_SUMMARY.md
docs/examples/: NESTED_ROUTES_EXPLANATION.md  TESTING_NESTED_ROUTES.md
docs/guides/: CUSTOM_NESTED_ROUTES.md  CUSTOM_ROUTES.md  ENRICHED_LINKS.md  GETTING_STARTED.md  GRAPHQL.md  LINK_AUTHORIZATION.md  LINK_METADATA.md  MULTI_LEVEL_NAVIGATION.md  MULTI_MODULE.md  MULTI_TENANCY.md  PAGINATION_AND_FILTERING.md  QUICK_START.md  UNLIMITED_NESTING_EXPLAINED.md  VALIDATION_AND_FILTERING.md
examples/: README.md  full_api.rs  simple_api.rs
examples/full_api/: README.md  main.rs
examples/microservice/: README.md  README_GRAPHQL.md  main.rs  main_graphql.rs  module.rs  store.rs
examples/microservice/config/: links.yaml
examples/microservice/entities/: mod.rs
examples/microservice/entities/invoice/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
examples/microservice/entities/order/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
examples/microservice/entities/payment/: descriptor.rs  handlers.rs  mod.rs  model.rs  store.rs
examples/simple_api/: README.md  main.rs
migrations/: 001_create_entities.up.sql  002_create_links.up.sql
proto/: this_grpc.proto
src/: lib.rs
src/config/: events.rs  mod.rs  sinks.rs
src/core/: auth.rs  entity.rs  error.rs  events.rs  extractors.rs  field.rs  link.rs  mod.rs  module.rs  pluralize.rs  query.rs  service.rs  store.rs
src/core/validation/: config.rs  extractor.rs  filters.rs  mod.rs  validators.rs
src/entities/: macros.rs  mod.rs
src/events/: compiler.rs  context.rs  log.rs  matcher.rs  memory.rs  mod.rs  runtime.rs  types.rs
src/events/operators/: batch.rs  deduplicate.rs  deliver.rs  fan_out.rs  filter.rs  map.rs  mod.rs  rate_limit.rs  resolve.rs
src/events/sinks/: counter.rs  device_tokens.rs  in_app.rs  mod.rs  preferences.rs  push.rs  webhook.rs  websocket.rs
src/links/: handlers.rs  mod.rs  registry.rs  service.rs
src/server/: builder.rs  entity_registry.rs  host.rs  mod.rs  router.rs
src/server/exposure/: mod.rs
src/server/exposure/graphql/: README.md  dynamic_schema.rs  executor.rs  macros.rs  mod.rs  schema.rs  schema_generator.rs  subscription_handler.rs
src/server/exposure/graphql/executor/: README.md  core.rs  field_resolver.rs  link_mutations.rs  mod.rs  mutation_executor.rs  query_executor.rs  utils.rs
src/server/exposure/grpc/: convert.rs  entity_service.rs  event_service.rs  link_service.rs  mod.rs  notification_service.rs  proto_generator.rs
src/server/exposure/rest/: mod.rs  notifications.rs  sse.rs
src/server/exposure/websocket/: dispatcher.rs  handler.rs  manager.rs  mod.rs  protocol.rs
src/storage/: dynamodb.rs  in_memory.rs  lmdb.rs  mod.rs  mongodb.rs  mysql.rs  neo4j.rs  postgres.rs  scylladb.rs
tests/: client_e2e_tests.rs  config_merging_tests.rs  cross_protocol_tests.rs  error_handling_tests.rs  fixes_validation_tests.rs  grpc_integration.rs  in_memory_tests.rs  lmdb_tests.rs  mongodb_tests.rs  mysql_tests.rs  neo4j_tests.rs  notification_e2e.rs  postgres_tests.rs  scylladb_tests.rs  websocket_integration.rs
tests/storage_harness/: data_service_tests.rs  link_service_tests.rs  mod.rs
tests/storage_harness/integration/: graphql_tests.rs  grpc_tests.rs  mod.rs  rest_tests.rs  ws_tests.rs
