[package]
name = "this-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A generic entity and relationship management framework for Rust"
repository = "https://github.com/yourusername/this-rs"
keywords = ["entity", "relationship", "rest", "api", "framework"]
categories = ["web-programming", "database"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database (optional features)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }

# UUID and datetime
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
regex = "1.10"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "15.0"

[features]
default = ["in-memory"]
in-memory = []
postgres = ["sqlx"]
all = ["in-memory", "postgres"]

[lib]
name = "this"
path = "src/lib.rs"

[[example]]
name = "simple_api"
path = "examples/simple_api.rs"

[[example]]
name = "full_api"
path = "examples/full_api.rs"
