[package]
name = "this-rs"
version = "0.0.3"
edition = "2021"
authors = ["Riviere Théotime <t@ffs.holdings>"]
license = "MIT OR Apache-2.0"
description = "A generic entity and relationship management framework for Rust"
repository = "https://github.com/this-rs/this"
keywords = ["entity", "relationship", "rest", "api", "framework"]
categories = ["web-programming", "database"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database (optional features)
# TODO: Re-enable when moving to ScyllaDB/DynamoDB
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }

# DynamoDB support
aws-sdk-dynamodb = { version = "1.93", optional = true }
serde_dynamo = { version = "4.0", optional = true }

# UUID and datetime
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
regex = "1.10"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "18.1"

[features]
default = ["in-memory"]
in-memory = []
dynamodb = ["aws-sdk-dynamodb", "serde_dynamo"]
# postgres = ["sqlx"]  # Disabled until ScyllaDB implementation
all = ["in-memory", "dynamodb"]

[lib]
name = "this"
path = "src/lib.rs"

[[example]]
name = "simple_api"
path = "examples/simple_api/main.rs"

[[example]]
name = "full_api"
path = "examples/full_api/main.rs"

[[example]]
name = "microservice"
path = "examples/microservice/main.rs"
