[package]
name = "this-rs"
version = "0.0.9"
edition = "2024"
authors = ["Riviere Théotime <t@ffs.holdings>"]
license = "MIT OR Apache-2.0"
description = "Framework for building complex multi-entity REST and GraphQL APIs with many relationships"
repository = "https://github.com/this-rs/this"
keywords = ["entity", "relationship", "rest", "graphql", "api"]
categories = ["web-programming", "web-programming::http-server", "database"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database (optional features)
sqlx = { version = "0.8", optional = true, default-features = false }
mongodb = { version = "3", optional = true }
neo4rs = { version = "0.8", optional = true }
scylla = { version = "1.4", optional = true }
heed = { version = "0.22", optional = true }
bincode = { version = "2", optional = true, features = ["serde"] }

# DynamoDB support
aws-sdk-dynamodb = { version = "1.93", optional = true }
serde_dynamo = { version = "4.0", optional = true }

# UUID and datetime
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
regex = "1.10"
validator = { version = "0.20", features = ["derive"] }

# GraphQL support (optional)
async-graphql = { version = "7", optional = true }
async-graphql-axum = { version = "7", optional = true }
graphql-parser = { version = "0.4", optional = true }

# gRPC support (optional)
tonic = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "18.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "mongo", "neo4j", "mysql"] }
tempfile = "3"

[features]
default = ["in-memory"]
in-memory = []
dynamodb = ["aws-sdk-dynamodb", "serde_dynamo"]
postgres = ["sqlx", "sqlx/macros", "sqlx/runtime-tokio-rustls", "sqlx/postgres", "sqlx/uuid", "sqlx/chrono", "sqlx/json", "sqlx/migrate"]
mongodb_backend = ["mongodb"]
neo4j = ["neo4rs"]
scylladb = ["scylla"]
mysql = ["sqlx", "sqlx/macros", "sqlx/runtime-tokio-rustls", "sqlx/mysql", "sqlx/uuid", "sqlx/chrono", "sqlx/json", "sqlx/migrate"]
lmdb = ["heed"]
graphql = ["async-graphql", "async-graphql-axum", "graphql-parser"]
grpc = ["tonic", "tonic-prost", "prost", "prost-types"]
websocket = []
all = ["in-memory", "dynamodb", "postgres", "mongodb_backend", "neo4j", "scylladb", "mysql", "lmdb", "graphql", "grpc", "websocket"]

[lib]
name = "this"
path = "src/lib.rs"

[[example]]
name = "simple_api"
path = "examples/simple_api/main.rs"

[[example]]
name = "full_api"
path = "examples/full_api/main.rs"

[[example]]
name = "microservice"
path = "examples/microservice/main.rs"

[[example]]
name = "microservice_graphql"
path = "examples/microservice/main_graphql.rs"
required-features = ["graphql"]
